# rubiks_cube_solver

./: .gitignore  README.md  dune-project  main  rubiks_cube_solver.opam
lib/: dune
src/: dune  main.ml
src/renderer/: dune  rubiks_cube_renderer.ml
src/thistlethwaite/: dune  goals.ml  indexers.ml  pattern_database.ml  rubiks_cube.ml  solver.ml
src/utils/: dune  functions.ml  moves_pruner.ml  moves_store.ml  priority_queue.ml  types.ml  utils.ml
test/: dune
