(lang dune 3.7)

(name rubiks_cube_solver)

(generate_opam_files true)

(source
 (github M1-info/rubiks_cube_solver))

(authors "Christian Tomasino" "Maxime Dupont") 

(maintainers "Christian Tomasino" "Maxime Dupont")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name rubiks_cube_solver)
 (synopsis "Rubik's cube solver")
 (description "University project to use OCaml to solve a Rubik's cube")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))
