opam-version: "2.1.2"
version: "0.0.1"
synopsis: "Rubik's cube solver implementation in OCaml"
maintainer: "Maxime Dupont - Tomasino Christian"
authors: "Maxime Dupont - Tomasino Christian"
license: "MIT"
homepage: "https://github.com/M1-info/rubiks_cube_solver"
bug-reports: "https://github.com/M1-info/rubiks_cube_solver/issues"
depends: [
  "conf-glfw3"
  "base-bigarray"
  "dune"              {>= "2.0"}
  "dune-configurator"
  "conf-pkg-config"   {build}
  "ocaml"             {>= "4.14.0"}
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/M1-info/rubiks_cube_solver"